# milvus

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
milvus/: __init__.py
notebooks/: 00_anomaly_prediction.ipynb  temperature_system.ipynb  temperature_system.xml
notebooks/images/: temperature_system.xml
